--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,75 +1,79 @@
- /* The side navigation menu */
- div.sidebar {
-     margin: 0;
-     background-color: #f1f1f1;
-     position: fixed;
-     height: 100%;
-     overflow-x: visible;
+.grid-container {
+    width: 100%;
+    margin: 0;
+    height: 90vh;
+    display: flex;
+    border: 0px solid rgba(0, 0, 0, .4);
+    transition: 1s ease;
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
+/* The side navigation menu */
+div.sidebar {
+    margin: 0;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow-x: visible;
     padding: 0px;
     border-top: 0px solid transparent;
     -webkit-overflow-scrolling: touch;
+}
 
- }
+/* Sidebar links */
+div.sidebar a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+}
 
- /* Sidebar links */
- div.sidebar a {
-     display: block;
-     color: black;
-     padding: 16px;
-     text-decoration: none;
- }
+/* Links on mouse-over */
+div.sidebar a:hover {
+    background-color: #555;
+    color: white;
+}
 
- /* Active/current link */
- div.sidebar a.active {
-     background-color: #04AA6D;
-     color: white;
- }
+/* Hide the link that should open and close the navbar on small screens */
+.sidebar .icon {
+    display: none;
+}
 
- /* Links on mouse-over */
- div.sidebar a:hover:not(.active) {
-     background-color: #555;
-     color: white;
- }
+.main-content {
+    margin-right: 20%;
+    margin-left: 20%;
+}
 
- /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
- div.content {
-     margin-left: 200px;
-     padding: 1px 16px;
-     height: 1000px;
- }
+@media screen and (max-width: 600px) {
+    div.sidebar {
+        height: auto;
+    }
+    .sidebar a:not(:first-child) {
+        display: none;
+    }
 
- /* On screens that are less than 700px wide, make the sidebar into a topbar */
- @media screen and (max-width: 700px) {
-     div.sidebar {
-         width: 100%;
-         height: auto;
-         position: relative;
-     }
+    .sidebar a.icon {
+        float: left;
+        display: block;
+    }
 
-     div.sidebar a {
-         float: left;
-     }
+    .main-content {
+        margin-right: 3%;
+    }
+}
 
-     div.content {
-         margin-left: 0;
-     }
- }
+@media screen and (max-width: 600px) {
+    .sidebar.responsive {
+        height: 100%;
+    }
+    .sidebar.responsive a.icon {
+        left: 0;
+        top: 0;
+    }
 
- /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
- @media screen and (max-width: 400px) {
-     div.sidebar a {
-         text-align: center;
-         float: none;
-     }
- }
-
- div.container {
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  
-  
+    .sidebar.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
