--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -46,25 +46,26 @@ div.sidebar a:hover {
 .side-button {
     text-decoration: none;
     text-transform: uppercase;
+    font-size: 1.5em;
     color: #000;
     cursor: pointer;
     border: 3px solid;
     height: fit-content;
     padding: 0.25em 0.5em;
-    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
-    position: relative;
+    box-shadow: 0.05em 0.05em 0em 0em, 0.1em 0.1em 0em 0em, 0.15em 0.15em 0em 0em, 0.2em 0.2em 0em 0em;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
 
     display: none;
     margin: 0.5em 0.5em;
+    position:fixed;
 }
 
 .side-button:active {
-    box-shadow: 0px 0px 0px 0px;
-    top: 5px;
-    left: 5px;
+    box-shadow: 0 0 0 0;
+    top: 0.5em;
+    left: 0.5em;
 }
 
 @media screen and (max-width: 600px) {
@@ -74,14 +75,13 @@ div.sidebar a:hover {
     }
 
     .side-button {
-        padding: 0.25em 0.5em;
         float: left;
         display: block;
     }
 
     .main-content {
         margin-right: 0em;
-        margin-left: 1em;
+        margin-left: 5em;
     }
 }
 
@@ -89,7 +89,7 @@ div.sidebar a:hover {
     .sidebar.responsive {
         display: block;
         height: auto;
-        padding-top: 2.5em;
+        padding-top: 4em;
     }
 
     .sidebar.responsive a {
@@ -100,6 +100,6 @@ div.sidebar a:hover {
 
     .sidebar.responsive a:not(:last-child) {
         border-bottom-style: solid;
-        border-width: 1px;
+        border-width: 0.1em;
     }
 }
