--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,37 +1,47 @@
+:root {
+    --grey: #555;
+    --light-grey: #d0d0d0;
+}
+
 .grid-container {
     width: 100%;
     margin: 0;
     height: 90vh;
     display: flex;
-    border: 0px solid rgba(0, 0, 0, .4);
+    border: 0px solid black;
     transition: 1s ease;
     font-family: "Lucida Console", "Courier New", monospace;
 }
 
 /* The side navigation menu */
-div.sidebar {
+.sidebar {
     margin: 0;
-    background-color: #f1f1f1;
+    background-color: var(--light-grey);
     position: fixed;
-    height: 100%;
+    height: fit-content;
     overflow-x: visible;
-    padding: 0px;
     border-top: 0px solid transparent;
     -webkit-overflow-scrolling: touch;
+    border-radius: 5%;
 }
 
 /* Sidebar links */
-div.sidebar a {
+.sidebar a {
     display: block;
     color: black;
-    padding: 16px;
+    padding: 1em;
     text-decoration: none;
 }
 
 /* Links on mouse-over */
-div.sidebar a:hover {
-    background-color: #555;
+.sidebar a:hover {
+    background-color: var(--grey);
     color: white;
+}
+
+.sidebar a:not(:last-child) {
+    border-bottom-style: solid;
+    border-width: 0.1em;
 }
 
 /* Hide the link that should open and close the navbar on small screens */
@@ -41,65 +51,73 @@ div.sidebar a:hover {
     margin-left: 20%;
 }
 
-
 /* Hide the link that should open and close the navbar on small screens */
 .side-button {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 1.5em;
-    color: #000;
-    cursor: pointer;
-    border: 3px solid;
-    height: fit-content;
-    padding: 0.25em 0.5em;
-    box-shadow: 0.05em 0.05em 0em 0em, 0.1em 0.1em 0em 0em, 0.15em 0.15em 0em 0em, 0.2em 0.2em 0em 0em;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-
     display: none;
-    margin: 0.5em 0.5em;
-    position:fixed;
+    position: fixed;
+    z-index: 999;
+    width: 3em;
+    height: 3em;
+    background: var(--light-grey);
+    border-radius: 100%;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    left: 1em;
+    top: 1em;
 }
 
-.side-button:active {
-    box-shadow: 0 0 0 0;
-    top: 0.5em;
-    left: 0.5em;
+.side-button:before {
+    position: absolute;
+    content: "";
+    width: 1.5em;
+    height: 0.1em;
+    background: black;
+    transform: rotate(90deg);
+    transition: all 0.4s ease;
 }
 
+.side-button:after {
+    position: absolute;
+    content: "";
+    width: 1.5em;
+    height: 0.1em;
+    background: black;
+    transition: all 0.4s ease;
+}
+
+#toggle {
+    -webkit-appearance: none;
+}
+
+#toggle:checked~div.sidebar {
+    opacity: 1;
+}
+
+#toggle:checked~.side-button:before {
+    transform: rotate(225deg);
+}
+
+#toggle:checked~.side-button:after {
+    transform: rotate(135deg);
+}
+
+/* When small screens */
 @media screen and (max-width: 600px) {
 
     .sidebar {
-        display: none;
+        opacity: 0;
+        height: auto;
+        transition: all 0.4s ease-in-out;
+        padding-top: 3em;
     }
 
     .side-button {
-        float: left;
-        display: block;
+        display: flex;
     }
 
     .main-content {
         margin-right: 0em;
-        margin-left: 5em;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .sidebar.responsive {
-        display: block;
-        height: auto;
-        padding-top: 4em;
-    }
-
-    .sidebar.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-
-    .sidebar.responsive a:not(:last-child) {
-        border-bottom-style: solid;
-        border-width: 0.1em;
+        margin-left: 4em;
     }
 }
